--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   barcode_scan: ^2.0.1
   get_mac: ^0.0.1
-
+  http: ^0.12.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
